--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "styled-components": "^5.1.1"
   },
