--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-store-08",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "proxy": "https://react-store-express-server.herokuapp.com",
   "dependencies": {
     "@formcarry/react": "^1.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
     "firebase": "^7.21.0",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^4.14.1",
